[NCL-9412] migrate and implement working Artifactory integration